--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@mui/icons-material": "^6.0.2",
+    "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.0.2",
     "@mui/x-date-pickers": "^7.19.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "firebase": "^10.13.1",
     "fuse.js": "^7.0.0",
     "react": "^18.3.1",
