--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
