--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,9 @@
         "src":"/[^.]+",
         "dest":"/",
         "status":200
-    }]
+    }],
+
+    "builds": [
+        { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
+      ]
 }
