--- a/.env.development
+++ b/.env.development
@@ -9,5 +9,4 @@ VITE_APP_ID=1:888384048446:web:337b8af932dea84f54706f
 
 
 
-# VITE_COMMENT_URL = https://cheatsheet-comment.vercel.app
-# yg production pun sneaky la sikit.
+VITE_COMMENT_URL = https://cheatsheet-comment-ghq7eiklf-aims-projects-29545e99.vercel.app/
