--- a/.env.development
+++ b/.env.development
@@ -9,4 +9,4 @@ VITE_APP_ID=1:888384048446:web:337b8af932dea84f54706f
 
 
 
-VITE_COMMENT_URL = https://cheatsheet-comment-ghq7eiklf-aims-projects-29545e99.vercel.app/
+VITE_COMMENT_URL = https://cheatsheet-comment-dev.vercel.app
