--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
+# Experimental back-end and database
 
 VITE_API_KEY=AIzaSyC-0Rk6uTST2UfJEezZFRxLgiqwEt2CZSQ
 VITE_AUTH_DOMAIN=cheatsheet-dev-df07e.firebaseapp.com
